--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>org.igniterealtime.openfire.plugins</groupId>
     <artifactId>inverse</artifactId>
     <name>Inverse Webchat Plugin</name>
-    <version>3.0.3-Alpha-1</version>
+    <version>3.1.0-release-1</version>
 
     <build>
         <sourceDirectory>src/java</sourceDirectory>
