--- a/plugin.xml
+++ b/plugin.xml
@@ -4,8 +4,8 @@
     <name>inVerse</name>
     <description>Adds the (third-party) inVerse web client to Openfire.</description>
     <author>Guus der Kinderen</author>
-    <version>3.3.4 Release 1</version>
-    <date>03/15/2018</date>
+    <version>3.3.5-SNAPSHOT</version>
+    <date>tbc</date>
     <minServerVersion>4.1.5</minServerVersion>
     <adminconsole>
         <tab id="tab-webclients" name="${admin.sidebar.webclients.name}" description="${admin.sidebar.webclients.description}" url="inverse-config.jsp">
