--- a/plugin.xml
+++ b/plugin.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin>
     <class>org.igniterealtime.openfire.plugin.inverse.InversePlugin</class>
-    <name>inVerse</name>
-    <description>Adds the (third-party) inVerse web client to Openfire.</description>
+    <name>${project.name}</name>
+    <description>${project.description}</description>
     <author>Guus der Kinderen</author>
     <version>${project.version}</version>
     <date>tbc</date>
     <minServerVersion>4.1.5</minServerVersion>
     <adminconsole>
-        <tab id="tab-webclients" name="${admin.sidebar.webclients.name}" description="${admin.sidebar.webclients.description}" url="inverse-config.jsp">
-            <sidebar id="tab-inverse" name="${admin.sidebar.webclients.item.inverse.name}" description="${admin.sidebar.webclients.item.inverse.description}">
-                <item id="inverse-config" name="${admin.sidebar.webclients.item.settings.name}" description="${admin.sidebar.webclients.item.settings.description}" url="inverse-config.jsp"/>
+        <tab id="tab-webclients" name="${admin.sidebar.webclients.name}"
+             description="${admin.sidebar.webclients.description}" url="inverse-config.jsp">
+            <sidebar id="tab-inverse" name="${admin.sidebar.webclients.item.inverse.name}"
+                     description="${admin.sidebar.webclients.item.inverse.description}">
+                <item id="inverse-config" name="${admin.sidebar.webclients.item.settings.name}"
+                      description="${admin.sidebar.webclients.item.settings.description}" url="inverse-config.jsp"/>
             </sidebar>
         </tab>
     </adminconsole>
