--- a/plugin.xml
+++ b/plugin.xml
@@ -2,10 +2,10 @@
 <plugin>
     <class>org.igniterealtime.openfire.plugin.inverse.InversePlugin</class>
     <name>inVerse</name>
-    <description>Adds the (third-party) inVerse web client to Openfire.</description>
+    <description>Adds the (third-party, Converse-based) inVerse web client to Openfire.</description>
     <author>Guus der Kinderen</author>
     <version>4.0.2 Release 1</version>
-    <date>09/20/2017</date>
+    <date>10/04/2018</date>
     <minServerVersion>4.1.5</minServerVersion>
     <adminconsole>
         <tab id="tab-webclients" name="${admin.sidebar.webclients.name}" description="${admin.sidebar.webclients.description}" url="inverse-config.jsp">
