--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>org.igniterealtime.openfire.plugins</groupId>
     <artifactId>inverse</artifactId>
     <name>Inverse Webchat Plugin</name>
-    <version>4.0.2-SNAPSHOT</version>
+    <version>4.0.2</version>
 
     <build>
         <sourceDirectory>src/java</sourceDirectory>
