--- a/plugin.xml
+++ b/plugin.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin>
     <class>org.igniterealtime.openfire.plugin.inverse.InversePlugin</class>
-    <name>inVerse</name>
-    <description>Adds the (third-party, Converse-based) inVerse web client to Openfire.</description>
+    <name>${project.name}</name>
+    <description>${project.description}</description>
     <author>Guus der Kinderen</author>
-    <version>4.0.4 Release 1</version>
+    <version>4.0.6 Release 1</version>
     <date>(TBD)</date>
     <minServerVersion>4.1.5</minServerVersion>
     <minJavaVersion>1.8</minJavaVersion>
